[package]
name = "lupdate"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.7"
assembly-pack = { version = "0.5.2", features = [
    "pk",
    "pki",
    "sd0",
    "md5sum",
    "manifest",
    "pki-gen-txt",
    "log"
] }
color-eyre = "0.5.11"
env_logger = "0.9"
globset = "0.4.8"
indexmap = { version = "1.8.0", features = ["serde-1"] }
log = "0.4"
serde = "1.0"
toml = "0.5.8"
